[package]
name = "my-carbon-example"
version = "0.1.0"
edition = "2021"
description = "A custom Carbon example similar to kamino-alerts"

[dependencies]
# Async runtime and logging dependencies.
async-trait = { version = "0.1.86" }
tokio = { version = "1.43.0" }
env_logger = "0.11.5"
dotenv = "0.15"
carbon-voting-decoder = { path = "../voting-decoder" }

# Carbon core libraries pulled from the Git repository.
carbon-core = { git = "https://github.com/sevenlabs-hq/carbon", package = "carbon-core" }
carbon-yellowstone-grpc-datasource = { git = "https://github.com/sevenlabs-hq/carbon", package = "carbon-yellowstone-grpc-datasource", version = "0.6.1" }
yellowstone-grpc-proto = "5.0.0"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
