[package]
name = "carbon-voting-decoder"
version = "0.1.0"
edition = "2021"
description = "Voting Decoder for the voting program"

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = "0.6.1"
borsh = "1.5.6"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "=1.17.3"
serde-big-array = "0.5.1"
bytemuck_derive = ">=1.8.1, <1.9.0"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }